feature/refactor-jule : fit to new standard

--- a/pages/day02.html
+++ b/pages/day02.html
@@ -30,22 +30,22 @@
 
   <body>
     <div class="layout">
-      <nav class="layout__nav hidden-mobile">
+      <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
+          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
         /></a>
-        <ul class="layout__nav--items">
-          <li class="nav__items--icon">
+        <ul class="layout-nav-items">
+          <li class="nav-items-icon">
             <a href="../index.html"
               ><i class="material-icons md-nav-icon">home</i></a
             >
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="#"
               ><i class="material-icons-outlined md-nav-hovered">hub</i></a
             >
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
@@ -53,41 +53,41 @@
         </ul>
       </nav>
 
-      <div class="layout__subnav hidden-mobile">
-        <div class="subnav__content">
-          <ul class="content__fixed--item">
-            <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
-            <li class="fixed--subject">
+      <div class="layout-subnav hidden-mobile">
+        <div class="subnav-content">
+          <ul class="content-fixed-item">
+            <li class="fixed-title text-bold"><h3>PROJECTS</h3></li>
+            <li class="fixed-subject">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="fixed--subject fixed--subject--active">
+            <li class="fixed-subject fixed-subject-active">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
@@ -96,14 +96,14 @@
         </div>
       </div>
 
-      <header class="layout__header">
+      <header class="layout-header">
         <a href="../index.html">
           <img
-            class="header__logo hidden-desktop"
+            class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
           />
         </a>
-        <label for="mobile-nav" class="header__nav--label hidden-desktop">
+        <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
         <input
@@ -111,71 +111,71 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large text-bold">
+        <ul class="header-mobile-nav-toggle hidden-desktop">
+          <li class="mobile-nav-page large text-bold">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page large text-bold">Project</li>
-          <ul class="mobile-nav__page--projects">
-            <li class="page--projects">
+          <li class="mobile-nav-page large text-bold">Project</li>
+          <ul class="mobile-nav-page-projects">
+            <li class="page-projects">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large text-bold">
+          <li class="mobile-nav-page large text-bold">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
-        <div class="header__empty hidden-desktop"></div>
+        <div class="header-empty hidden-desktop"></div>
         <a href="../index.html">
-          <div class="header__content">
-            <h2 class="header-content__title">HTML & CSS Piscine</h2>
+          <div class="header-content">
+            <h2 class="header-content-title">HTML & CSS Piscine</h2>
             <img
-              class="header-content__img hidden-mobile"
+              class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
             />
           </div>
         </a>
       </header>
 
-      <main class="layout__content">
-        <div class="content__frame">
-          <h2 class="content__head xxxlarge text-bold">DAY02</h2>
+      <main class="layout-content">
+        <div class="content-frame">
+          <h2 class="content-head xxxlarge text-bold">DAY02</h2>
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Basic Instruction</h3>
-            <ul class="content__list">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
+            <ul class="content-list">
               <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
               <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
               <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
@@ -226,9 +226,9 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Foreword</h3>
-            <p class="content__para">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Foreword</h3>
+            <p class="content-para">
               IMAX 영화 필름은 일반 영화 필름보다 10배 더 선명한 화질을
               제공합니다. 일반 영화 스크린의 시야 범위는 54°, IMAX 영화 스크린의
               시야 범위는 70°로 관객들은 영화에 더 몰입할 수 있지요. 얼마 전
@@ -240,42 +240,42 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 00 : Somewhere Over the Rainbow(GRID)
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 00</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">
                     Somewhere Over the Rainbow(GRID)
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex00/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex00/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">
                     index.html, css/style.css, css/color.css
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">div</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">div</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 grid layout을 사용해 아래와 같이 페이지에 출력하세요 (각 cell의
                 규격: 300px * 200px).
@@ -284,47 +284,47 @@
                 모든 색깔은 css/color.css에 지정한 변수를 불러 사용해야 합니다.
               </li>
             </ul>
-            <img class="content__img" src="../assets/day02/ex00.png" />
+            <img class="content-img" src="../assets/day02/ex00.png" />
           </section>
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 01 : Functional CSS
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 01</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">
                     Functional CSS
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex01/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex01/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">
                     index.html, css/style.css, css/color.css
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">div</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">div</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 ex00의 코드를 수정하여 아래 사진과 같이 페이지에 출력하세요 (각
                 cell의 규격: 300px (min) * 300px).
@@ -334,60 +334,60 @@
               </li>
               <li>다양한 CSS functions를 사용해보세요.</li>
             </ul>
-            <img class="content__img" src="../assets/day02/ex01.png" />
-            <ul class="content__list">
+            <img class="content-img" src="../assets/day02/ex01.png" />
+            <ul class="content-list">
               <li>full screen에서는 아래와 같이 출력됩니다.</li>
             </ul>
-            <p class="content__tip">
+            <p class="content-tip">
               <i class="material-icons-outlined">lightbulb</i>repeat() &
               minmax()를 검색해보세요.
             </p>
-            <img class="content__img" src="../assets/day02/ex01_full.png" />
+            <img class="content-img" src="../assets/day02/ex01_full.png" />
           </section>
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 02 : 42stagram
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 02</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">42stagram</td>
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">42stagram</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex02/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex02/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">
                     index.html, css/*.css, css/color.css, assets/(image files if
                     necessary)
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">제한 없음</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">제한 없음</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>아래 영상과 사진 같이 42stagram UI를 만드세요.</li>
               <li>영상에 주어진 viewport 규격대로 만드세요.</li>
               <li>Responsive 하지 않아도 괜찮습니다.</li>
               <li>폰트/이미지 사이즈가 완벽하게 같을 필요는 없습니다.</li>
             </ul>
-            <p class="content__tip">
+            <p class="content-tip">
               <i class="material-icons-outlined">lightbulb</i>아이콘이
               필요하신가요?
               <a
@@ -396,17 +396,17 @@
                 >구글</a
               >이 여러분과 함께합니다.
             </p>
-            <img class="content__img" src="../assets/day02/ex02.png" />
+            <img class="content-img" src="../assets/day02/ex02.png" />
             <iframe
-              class="content__video"
+              class="content-video"
               src="../assets/day02/ex02.mp4"
             ></iframe>
           </section>
         </div>
       </main>
 
-      <footer class="layout__footer">
-        <p class="layout__footer--text small">
+      <footer class="layout-footer">
+        <p class="layout-footer-text small">
           credit to
           <a
             class="text-underline"
