--- a/pages/guideline.html
+++ b/pages/guideline.html
@@ -30,64 +30,64 @@
 
   <body>
     <div class="layout">
-      <nav class="layout__nav hidden-mobile">
+      <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
+          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
         /></a>
-        <ul class="layout__nav--items">
-          <li class="nav__items--icon">
+        <ul class="layout-nav-items">
+          <li class="nav-items-icon">
             <a href="../index.html"
               ><i class="material-icons md-nav-hovered">home</i></a
             >
           </li>
-          <li class="nav__items--icon">
-            <label for="subnav" class="nav__subnav--label">
+          <li class="nav-items-icon">
+            <label for="subnav" class="nav-subnav-label">
               <i class="material-icons-outlined md-nav-icon">hub</i>
             </label>
             <input type="checkbox" id="subnav" />
-            <ul class="subnav--toggle">
-              <li class="subnav--toggle__title text-bold"><h3>PROJECTS</h3></li>
-              <li class="subnav--toggle__subject">
+            <ul class="subnav-toggle">
+              <li class="subnav-toggle-title text-bold"><h3>PROJECTS</h3></li>
+              <li class="subnav-toggle-subject">
                 <a href="day00.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY00</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="day01.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY01</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="day02.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY02</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="day03.html"
                   ><i class="material-icons md-subnav-icon">egg</i>DAY03</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="day04.html"
                   ><i class="material-icons md-subnav-icon">egg</i>DAY04</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="day05.html"
                   ><i class="material-icons md-subnav-icon">egg</i>DAY05</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="rush.html"
                   ><i class="material-icons md-subnav-icon">egg</i>RUSH</a
                 >
               </li>
             </ul>
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
@@ -95,14 +95,14 @@
         </ul>
       </nav>
 
-      <header class="layout__header">
+      <header class="layout-header">
         <a href="../index.html">
           <img
-            class="header__logo hidden-desktop"
+            class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
           />
         </a>
-        <label for="mobile-nav" class="header__nav--label hidden-desktop">
+        <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
         <input
@@ -110,71 +110,71 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large text-bold">
+        <ul class="header-mobile-nav-toggle hidden-desktop">
+          <li class="mobile-nav-page large text-bold">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page large text-bold">Project</li>
-          <ul class="mobile-nav__page--projects">
-            <li class="page--projects">
+          <li class="mobile-nav-page large text-bold">Project</li>
+          <ul class="mobile-nav-page-projects">
+            <li class="page-projects">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large text-bold">
+          <li class="mobile-nav-page large text-bold">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
-        <div class="header__empty hidden-desktop"></div>
+        <div class="header-empty hidden-desktop"></div>
         <a href="../index.html">
-          <div class="header__content">
-            <h2 class="header-content__title">HTML & CSS Piscine</h2>
+          <div class="header-content">
+            <h2 class="header-content-title">HTML & CSS Piscine</h2>
             <img
-              class="header-content__img hidden-mobile"
+              class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
             />
           </div>
         </a>
       </header>
 
-      <main class="layout__content">
-        <div class="content__frame">
-          <h2 class="content__head xxxlarge text-bold">Guideline</h2>
+      <main class="layout-content">
+        <div class="content-frame">
+          <h2 class="content-head xxxlarge text-bold">Guideline</h2>
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">기본 규칙</h3>
-            <ul class="content__list">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">기본 규칙</h3>
+            <ul class="content-list">
               <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
               <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
               <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
@@ -225,10 +225,10 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Coding Standard</h3>
-            <h4 class="content__subhead-two large text-bold">HTML Norm</h4>
-            <ul class="content__list">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Coding Standard</h3>
+            <h4 class="content-subhead-two large text-bold">HTML Norm</h4>
+            <ul class="content-list">
               <li>
                 모든 HTML 파일은
                 <a
@@ -240,8 +240,8 @@
               </li>
               <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
             </ul>
-            <h4 class="content__subhead-two large text-bold">CSS Norm</h4>
-            <ul class="content__list">
+            <h4 class="content-subhead-two large text-bold">CSS Norm</h4>
+            <ul class="content-list">
               <li>Block별로 CSS file을 만들어야 합니다.</li>
               <li>Tab size는 2개의 space로 이루어져야 합니다.</li>
               <li>CSS file은 100줄을 넘지 않아야 합니다.</li>
@@ -251,81 +251,81 @@
               </li>
               <li>CSS 방법론인 BEM 따라야 합니다.</li>
             </ul>
-            <h4 class="content__subhead-two large text-bold">BEM</h4>
-            <p class="content__para">
+            <h4 class="content-subhead-two large text-bold">BEM</h4>
+            <p class="content-para">
               BEM은 기본적으로 id와 CSS tag가 아닌 class만 사용해야 합니다.
             </p>
-            <pre><code class="content__code"
-              ><p class="code__line text-bold">.class #test_id { ... } ❌</p>
-              <p class="code__line text-bold">.class div { ... } ❌</p>
-              <p class="code__line text-bold">.class__test {... } 👌</p></code
+            <pre><code class="content-code"
+              ><p class="code-line text-bold">.class #test_id { ... } ❌</p>
+              <p class="code-line text-bold">.class div { ... } ❌</p>
+              <p class="code-line text-bold">.class-test {... } 👌</p></code
             ></pre>
-            <h5 class="content__subhead-three text-bold">Block</h5>
-            <ul class="content__list">
+            <h5 class="content-subhead-three text-bold">Block</h5>
+            <ul class="content-list">
               <li>
                 block은 문단 전체에 적용된 element 또는 element를 담고 있는
                 컨테이너를 말합니다. ex) logo / login form / menu / search from
                 / content / footer
               </li>
             </ul>
-            <pre><code class="content__code"
-            ><p class="code__line text-bold">&lt;div class="header"&gt;</p>
-            <p class="code__line text-bold">&nbsp;&nbsp;&lt;div class="menu"&gt;....&lt;/div&gt;</p>
-            <p class="code__line text-bold">&nbsp;&nbsp;&lt;div class="search"&gt;....&lt;/div&gt;</p>
-            <p class="code__line text-bold">&lt;div&gt;</p>
+            <pre><code class="content-code"
+            ><p class="code-line text-bold">&lt;div class="header"&gt;</p>
+            <p class="code-line text-bold">&nbsp;&nbsp;&lt;div class="menu"&gt;....&lt;/div&gt;</p>
+            <p class="code-line text-bold">&nbsp;&nbsp;&lt;div class="search"&gt;....&lt;/div&gt;</p>
+            <p class="code-line text-bold">&lt;div&gt;</p>
           </code></pre>
-            <h5 class="content__subhead-three text-bold">Element</h5>
-            <ul class="content__list">
+            <h5 class="content-subhead-three text-bold">Element</h5>
+            <ul class="content-list">
               <li>
                 element는 block 안에서 특정 기능을 수행하는 컴포넌트 입니다.
                 element는 상황에 따라 달라집니다. 각 element는 두 개의
                 밑줄표시로 연결하여 block 다음에 작성합니다.
               </li>
             </ul>
-            <pre><code class="content__code"
-            ><p class="code__line text-bold">.header__logo { … }</p>
-            <p class="code__line text-bold">.header__menu { … }</p>
-            <p class="code__line text-bold">.header__search { … }</p>
-            <p class="code__line text-bold">.header__login { … }</p>
+            <pre><code class="content-code"
+            ><p class="code-line text-bold">.header-logo { … }</p>
+            <p class="code-line text-bold">.header-menu { … }</p>
+            <p class="code-line text-bold">.header-search { … }</p>
+            <p class="code-line text-bold">.header-login { … }</p>
           </code></pre>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 block 이름이나 element 이름이 길 경우 하이픈(-)으로 연결합니다.
               </li>
             </ul>
-            <pre><code class="content__code"
-            ><p class="code__line text-bold">.block-name__element-name</p>
+            <pre><code class="content-code"
+            ><p class="code-line text-bold">.block-name-element-name</p>
           </code></pre>
-            <h5 class="content__subhead-three text-bold">Modifiers</h5>
-            <ul class="content__list">
+            <h5 class="content-subhead-three text-bold">Modifiers</h5>
+            <ul class="content-list">
               <li>Modifier는 block 또는 element의 속성입니다.</li>
-              <ul class="content__list--sub-list small">
+              <ul class="content-list-sub-list small">
                 <li>
                   이 속성은 block 또는 element의 외관이나 상태를 변화시킵니다.
                 </li>
                 <li>Class명은 “–“를 추가하여 modifier를 추가하여야 합니다.</li>
               </ul>
             </ul>
-            <pre><code class="content__code"
-            ><p class="code__line text-bold">.block‐‐modifier { … }</p>
-            <p class="code__line text-bold">.block__element--modifier { … }</p>
+            <pre><code class="content-code"
+            ><p class="code-line text-bold">.block‐‐modifier { … }</p>
+            <p class="code-line text-bold">.block-element-modifier { … }</p>
           </code></pre>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 탭 메뉴가 다른 영역에서 다른 스타일로 사용된다면 메인 속성을
                 복사하여 추가하여야 합니다.
               </li>
             </ul>
-            <pre><code class="content__code"
-            ><p class="code__line text-bold">.header__navigation {</p>
-            <p class="code__line text-bold">&nbsp;&nbsp;background: #008cba;</p>
-            <p class="code__line text-bold">&nbsp;&nbsp;padding: 1px 0;</p>
-            <p class="code__line text-bold">&nbsp;&nbsp;margin: 2px 0;</p>
-            <p class="code__line text-bold">}</p>
+            <pre><code class="content-code"
+            ><p class="code-line text-bold">.header-navigation {</p>
+            <p class="code-line text-bold">&nbsp;&nbsp;background: #008cba;</p>
+            <p class="code-line text-bold">&nbsp;&nbsp;padding: 1px 0;</p>
+            <p class="code-line text-bold">&nbsp;&nbsp;margin: 2px 0;</p>
+            <p class="code-line text-bold">}</p>
           </code></pre>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>class명이 길다면</li>
-              <ul class="content__list--sub-list small">
+              <ul class="content-list-sub-list small">
                 <li>
                   BEM의 class명은 구체적이고 명료하여 HTML안에서도 읽기 쉬워야
                   합니다.
@@ -337,15 +337,13 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
-              42 서울 Honor Code
-            </h3>
-            <p class="content__para large">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">42 서울 Honor Code</h3>
+            <p class="content-para large">
               우리는 헤아릴 수 없이 거대한 우주와 시간의 역사 속에서 찰나의
               순간을 함께 보내며 경이로운 모험을 하는 여행자들입니다.
             </p>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 42 서울인은 개개인이 서로 다름을 인정하고 수용하는 자세를
                 가집니다.
@@ -380,8 +378,8 @@
         </div>
       </main>
 
-      <footer class="layout__footer">
-        <p class="layout__footer--text small">
+      <footer class="layout-footer">
+        <p class="layout-footer-text small">
           credit to
           <a
             class="text-underline"
