--- a/index.html
+++ b/index.html
@@ -34,67 +34,67 @@
 
   <body>
     <div class="layout">
-      <nav class="layout__nav hidden-mobile">
+      <nav class="layout-nav hidden-mobile">
         <a href="index.html"
-          ><img src="assets/42_logo_nav.svg" class="layout__nav--logo"
+          ><img src="assets/42_logo_nav.svg" class="layout-nav-logo"
         /></a>
-        <ul class="layout__nav--items">
-          <li class="nav__items--icon">
+        <ul class="layout-nav-items">
+          <li class="nav-items-icon">
             <a href="index.html"
               ><i class="material-icons md-nav-hovered">home</i></a
             >
           </li>
-          <li class="nav__items--icon">
-            <label for="subnav" class="nav__subnav--label">
+          <li class="nav-items-icon">
+            <label for="subnav" class="nav-subnav-label">
               <i class="material-icons-outlined md-nav-icon">hub</i>
             </label>
             <input type="checkbox" id="subnav" />
-            <ul class="subnav--toggle">
-              <li class="subnav--toggle__title text-bold"><h3>PROJECTS</h3></li>
-              <li class="subnav--toggle__subject">
+            <ul class="subnav-toggle">
+              <li class="subnav-toggle-title text-bold"><h3>PROJECTS</h3></li>
+              <li class="subnav-toggle-subject">
                 <a href="pages/day00.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY00</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="pages/day01.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY01</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="pages/day02.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY02</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="pages/day03.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY03</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="pages/day04.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY04</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="pages/day05.html"
                   ><i class="material-icons md-subnav-icon">egg</i
                   >&nbsp;DAY05</a
                 >
               </li>
-              <li class="subnav--toggle__subject">
+              <li class="subnav-toggle-subject">
                 <a href="pages/rush.html"
                   ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
                 >
               </li>
             </ul>
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="pages/guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
@@ -102,14 +102,14 @@
         </ul>
       </nav>
 
-      <header class="layout__header">
+      <header class="layout-header">
         <a href="index.html">
           <img
-            class="header__logo hidden-desktop"
+            class="header-logo hidden-desktop"
             src="assets/42_logo_nav.svg"
           />
         </a>
-        <label for="mobile-nav" class="header__nav--label hidden-desktop">
+        <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
         <input
@@ -117,85 +117,85 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large text-bold">
+        <ul class="header-mobile-nav-toggle hidden-desktop">
+          <li class="mobile-nav-page large text-bold">
             <a href="index.html">About</a>
           </li>
-          <li class="mobile-nav__page large text-bold">Project</li>
-          <ul class="mobile-nav__page--projects">
-            <li class="page--projects">
+          <li class="mobile-nav-page large text-bold">Project</li>
+          <ul class="mobile-nav-page-projects">
+            <li class="page-projects">
               <a href="pages/day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="pages/day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="pages/day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="pages/day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="pages/day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="pages/day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="pages/rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large text-bold">
+          <li class="mobile-nav-page large text-bold">
             <a href="pages/guideline.html">Guideline</a>
           </li>
         </ul>
-        <div class="header__empty hidden-desktop"></div>
+        <div class="header-empty hidden-desktop"></div>
         <a href="index.html">
-          <div class="header__content">
-            <h2 class="header-content__title">HTML & CSS Piscine</h2>
+          <div class="header-content">
+            <h2 class="header-content-title">HTML & CSS Piscine</h2>
             <img
-              class="header-content__img hidden-mobile"
+              class="header-content-img hidden-mobile"
               src="assets/header_chick.jpg"
             />
           </div>
         </a>
       </header>
 
-      <main class="layout__content">
-        <div class="content__frame">
-          <h2 class="content__head xxxlarge text-bold">About</h2>
+      <main class="layout-content">
+        <div class="content-frame">
+          <h2 class="content-head xxxlarge text-bold">About</h2>
           <img
-            class="content__logo"
+            class="content-logo"
             alt="html_css_logo"
             src="assets/html_css_logo.png"
           />
-          <h3 class="content__welcome xlarge text-bold">
+          <h3 class="content-welcome xlarge text-bold">
             42 HTML & CSS Piscine 에 오신 여러분을 환영합니다 🐣
           </h3>
-          <p class="content__para large">
+          <p class="content-para large">
             HTML & CSS Piscine은 7일 동안 동료들과 함께 토이 프로젝트들을
             수행하며 웹페이지의 뼈대를 이루는 HTML & CSS 기술을 익히는
             프로젝트입니다.
           </p>
-          <p class="content__para large">
+          <p class="content-para large">
             여러분은 아래의 기법들을 직접 사용해보며 다양한 디자인의
             웹페이지들을 구현할 것 입니다.
           </p>
-          <ul class="content__list large">
+          <ul class="content-list large">
             <li>HTML tags & semantics</li>
             <li>CSS syntax</li>
             <li>CSS Layout (block, flexbox, grid, etc.)</li>
@@ -203,13 +203,13 @@
             <li>CSS animation</li>
             <li>Responsive web design</li>
           </ul>
-          <p class="content__para large">
+          <p class="content-para large">
             Piscine 에서 살아남을 수 있는 방법은 단 하나 뿐이죠. 모르는게
             있으신가요? 양 옆에 있는 동료에게 물어보세요. 양 옆에 있는 동료도
             모른다면 세명이 함께 다른 동료를 찾아가 질문하세요. Google 이
             여러분과 함께합니다.
           </p>
-          <p class="content__para large">
+          <p class="content-para large">
             HTML & CSS 피신에서는 clean coding을 위해 최소한의
             <a
               class="text-underline text-bold"
@@ -218,18 +218,18 @@
               >지침</a
             >을 제공합니다. 과제 수행 시 지침을 꼭 지켜주세요.
           </p>
-          <p class="content__para large">
+          <p class="content-para large">
             자 그럼 떨리는 마음으로 다 같이 외쳐볼까요?
           </p>
-          <p class="content__para large">
+          <p class="content-para large">
             "병아리가 닭이 되는 그날까지! 초보가 초고수가 되는 그날까지! Chick
             to Chicken~ 🐣 <a href="https://www.kfckorea.com/">🐓</a>"
           </p>
         </div>
       </main>
 
-      <footer class="layout__footer">
-        <p class="layout__footer--text small">
+      <footer class="layout-footer">
+        <p class="layout-footer-text small">
           credit to
           <a
             class="text-underline"
