--- a/pages/day03.html
+++ b/pages/day03.html
@@ -30,22 +30,22 @@
 
   <body>
     <div class="layout">
-      <nav class="layout__nav hidden-mobile">
+      <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
+          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
         /></a>
-        <ul class="layout__nav--items">
-          <li class="nav__items--icon">
+        <ul class="layout-nav-items">
+          <li class="nav-items-icon">
             <a href="../index.html"
               ><i class="material-icons md-nav-icon">home</i></a
             >
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="#"
               ><i class="material-icons-outlined md-nav-hovered">hub</i></a
             >
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
@@ -53,41 +53,41 @@
         </ul>
       </nav>
 
-      <div class="layout__subnav hidden-mobile">
-        <div class="subnav__content">
-          <ul class="content__fixed--item">
-            <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
-            <li class="fixed--subject">
+      <div class="layout-subnav hidden-mobile">
+        <div class="subnav-content">
+          <ul class="content-fixed-item">
+            <li class="fixed-title text-bold"><h3>PROJECTS</h3></li>
+            <li class="fixed-subject">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="fixed--subject fixed--subject--active">
+            <li class="fixed-subject fixed-subject-active">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
@@ -96,14 +96,14 @@
         </div>
       </div>
 
-      <header class="layout__header">
+      <header class="layout-header">
         <a href="../index.html">
           <img
-            class="header__logo hidden-desktop"
+            class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
           />
         </a>
-        <label for="mobile-nav" class="header__nav--label hidden-desktop">
+        <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
         <input
@@ -111,71 +111,71 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large text-bold">
+        <ul class="header-mobile-nav-toggle hidden-desktop">
+          <li class="mobile-nav-page large text-bold">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page large text-bold">Project</li>
-          <ul class="mobile-nav__page--projects">
-            <li class="page--projects">
+          <li class="mobile-nav-page large text-bold">Project</li>
+          <ul class="mobile-nav-page-projects">
+            <li class="page-projects">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large text-bold">
+          <li class="mobile-nav-page large text-bold">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
-        <div class="header__empty hidden-desktop"></div>
+        <div class="header-empty hidden-desktop"></div>
         <a href="../index.html">
-          <div class="header__content">
-            <h2 class="header-content__title">HTML & CSS Piscine</h2>
+          <div class="header-content">
+            <h2 class="header-content-title">HTML & CSS Piscine</h2>
             <img
-              class="header-content__img hidden-mobile"
+              class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
             />
           </div>
         </a>
       </header>
 
-      <main class="layout__content">
-        <div class="content__frame">
-          <h2 class="content__head xxxlarge text-bold">DAY03</h2>
+      <main class="layout-content">
+        <div class="content-frame">
+          <h2 class="content-head xxxlarge text-bold">DAY03</h2>
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Basic Instruction</h3>
-            <ul class="content__list">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
+            <ul class="content-list">
               <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
               <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
               <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
@@ -226,9 +226,9 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Foreword</h3>
-            <p class="content__para">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Foreword</h3>
+            <p class="content-para">
               여러분... 아이유 콘서트 가 보셨나요? 세상에 이렇게 좋은 콘서트가
               있을 수 없답니다. 하핫! 저 작은 체구에서 노래를 5시간을 연달아
               부른다니까요? 진짜 경이로운데 노래가 아주 그냥 하나하나 주옥같아서
@@ -240,38 +240,38 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 00 : The Chaotic Boxes 🤪
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 00</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">FTube</td>
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">FTube</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex00/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex00/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">index.html, css/*.css</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">index.html, css/*.css</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">div, span</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">div, span</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 겉만 보면 평범하지만 마우스를 올리면 재미있어지는 박스들을
                 만들어봅시다.
@@ -279,47 +279,47 @@
               <li>다양한 animation을 적용해 영상과 같이 구현해보세요.</li>
             </ul>
             <iframe
-              class="content__video-horiz"
+              class="content-video-horiz"
               src="../assets/day03/ex00.mp4"
             ></iframe>
           </section>
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 01 : Flexible Ribbons
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 01</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">
                     Flexible Ribbons
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex01/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex01/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">index.html, style.css</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">index.html, style.css</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">div</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">div</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>
                 아래 영상과 같이 스크린 크기에 비례하게 ribbon의 너비 & 높이가
                 변하게 만드세요.
@@ -327,50 +327,50 @@
               <li>다양한 animation을 적용해 영상과 같이 구현해보세요.</li>
             </ul>
             <iframe
-              class="content__video-horiz"
+              class="content-video-horiz"
               src="../assets/day03/ex01.mp4"
             ></iframe>
           </section>
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 02 : Responsiveness is Responsibility
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 02</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">
                     Responsiveness is Responsibility
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex02/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex02/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">
                     index.html, css/*.css, css/color.css, assets/(image files if
                     necessary)
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">제한 없음</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">제한 없음</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>지금까지는 모바일 규격의 UI만 만들었죠.</li>
               <li>
                 영상과 같이 창 너비가 800px을 넘어갈 때 경고하는 개구리가
@@ -378,15 +378,15 @@
               </li>
             </ul>
             <iframe
-              class="content__video-horiz"
+              class="content-video-horiz"
               src="../assets/day03/ex02.mp4"
             ></iframe>
           </section>
         </div>
       </main>
 
-      <footer class="layout__footer">
-        <p class="layout__footer--text small">
+      <footer class="layout-footer">
+        <p class="layout-footer-text small">
           credit to
           <a
             class="text-underline"
