--- a/pages/day04.html
+++ b/pages/day04.html
@@ -30,22 +30,22 @@
 
   <body>
     <div class="layout">
-      <nav class="layout__nav hidden-mobile">
+      <nav class="layout-nav hidden-mobile">
         <a href="../index.html"
-          ><img src="../assets/42_logo_nav.svg" class="layout__nav--logo"
+          ><img src="../assets/42_logo_nav.svg" class="layout-nav-logo"
         /></a>
-        <ul class="layout__nav--items">
-          <li class="nav__items--icon">
+        <ul class="layout-nav-items">
+          <li class="nav-items-icon">
             <a href="../index.html"
               ><i class="material-icons md-nav-icon">home</i></a
             >
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="#"
               ><i class="material-icons-outlined md-nav-hovered">hub</i></a
             >
           </li>
-          <li class="nav__items--icon">
+          <li class="nav-items-icon">
             <a href="guideline.html"
               ><i class="material-icons-outlined md-nav-icon">explore</i></a
             >
@@ -53,41 +53,41 @@
         </ul>
       </nav>
 
-      <div class="layout__subnav hidden-mobile">
-        <div class="subnav__content">
-          <ul class="content__fixed--item">
-            <li class="fixed--title text-bold"><h3>PROJECTS</h3></li>
-            <li class="fixed--subject">
+      <div class="layout-subnav hidden-mobile">
+        <div class="subnav-content">
+          <ul class="content-fixed-item">
+            <li class="fixed-title text-bold"><h3>PROJECTS</h3></li>
+            <li class="fixed-subject">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="fixed--subject fixed--subject--active">
+            <li class="fixed-subject fixed-subject-active">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="fixed--subject">
+            <li class="fixed-subject">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
@@ -96,14 +96,14 @@
         </div>
       </div>
 
-      <header class="layout__header">
+      <header class="layout-header">
         <a href="../index.html">
           <img
-            class="header__logo hidden-desktop"
+            class="header-logo hidden-desktop"
             src="../assets/42_logo_nav.svg"
           />
         </a>
-        <label for="mobile-nav" class="header__nav--label hidden-desktop">
+        <label for="mobile-nav" class="header-nav-label hidden-desktop">
           <i class="material-icons menu-icon">menu</i>
         </label>
         <input
@@ -111,71 +111,71 @@
           id="mobile-nav"
           class="hidden-desktop hidden-mobile"
         />
-        <ul class="header__mobile-nav--toggle hidden-desktop">
-          <li class="mobile-nav__page large text-bold">
+        <ul class="header-mobile-nav-toggle hidden-desktop">
+          <li class="mobile-nav-page large text-bold">
             <a href="../index.html">About</a>
           </li>
-          <li class="mobile-nav__page large text-bold">Project</li>
-          <ul class="mobile-nav__page--projects">
-            <li class="page--projects">
+          <li class="mobile-nav-page large text-bold">Project</li>
+          <ul class="mobile-nav-page-projects">
+            <li class="page-projects">
               <a href="day00.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY00</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day01.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY01</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day02.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY02</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day03.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY03</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day04.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY04</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="day05.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;DAY05</a
               >
             </li>
-            <li class="page--projects">
+            <li class="page-projects">
               <a href="rush.html"
                 ><i class="material-icons md-subnav-icon">egg</i>&nbsp;RUSH</a
               >
             </li>
           </ul>
-          <li class="mobile-nav__page large text-bold">
+          <li class="mobile-nav-page large text-bold">
             <a href="guideline.html">Guideline</a>
           </li>
         </ul>
-        <div class="header__empty hidden-desktop"></div>
+        <div class="header-empty hidden-desktop"></div>
         <a href="../index.html">
-          <div class="header__content">
-            <h2 class="header-content__title">HTML & CSS Piscine</h2>
+          <div class="header-content">
+            <h2 class="header-content-title">HTML & CSS Piscine</h2>
             <img
-              class="header-content__img hidden-mobile"
+              class="header-content-img hidden-mobile"
               src="../assets/header_chick.jpg"
             />
           </div>
         </a>
       </header>
 
-      <main class="layout__content">
-        <div class="content__frame">
-          <h2 class="content__head xxxlarge text-bold">DAY04</h2>
+      <main class="layout-content">
+        <div class="content-frame">
+          <h2 class="content-head xxxlarge text-bold">DAY04</h2>
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Basic Instruction</h3>
-            <ul class="content__list">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Basic Instruction</h3>
+            <ul class="content-list">
               <li>오직 이 페이지만 참고해야 합니다. 소문은 믿지 마세요.</li>
               <li>파일 제출 전에 이 문서가 변경될 수도 있으니 주의하세요!</li>
               <li>모든 과제물을 제출할 때는 제출 절차를 따라야 합니다.</li>
@@ -226,9 +226,9 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">Foreword</h3>
-            <p class="content__para">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">Foreword</h3>
+            <p class="content-para">
               대박사건 대박사건! 오늘은 단 한문제로 끝납니다! 그리고 놀라운
               CSS의 기능에 감탄하게 될 겁니다.
             </p>
@@ -236,40 +236,40 @@
 
           <hr class="horiz-divider" />
 
-          <section class="content__section">
-            <h3 class="content__subhead xlarge text-bold">
+          <section class="content-section">
+            <h3 class="content-subhead xlarge text-bold">
               Exercise 00 : FTube
             </h3>
-            <table class="content__table">
-              <thead class="content__table--thead text-bold">
-                <tr class="content__table--tr">
+            <table class="content-table">
+              <thead class="content-table-thead text-bold">
+                <tr class="content-table-tr">
                   <th colspan="3">Exercise 00</th>
                 </tr>
               </thead>
-              <tbody class="content__table--tbody">
-                <tr class="content__table--tr content__table--ex-name">
-                  <td colspan="3" class="content__table--td-name">FTube</td>
+              <tbody class="content-table-tbody">
+                <tr class="content-table-tr content-table-ex-name">
+                  <td colspan="3" class="content-table-td-name">FTube</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 디렉토리</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">ex00/</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 디렉토리</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">ex00/</td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">제출 파일</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">
+                <tr class="content-table-tr">
+                  <td class="content-table-td">제출 파일</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">
                     index.html, css/*.css, assets/(image files if necessary)
                   </td>
                 </tr>
-                <tr class="content__table--tr">
-                  <td class="content__table--td">허용 태그</td>
-                  <td class="content__table--td-colon">:</td>
-                  <td class="content__table--td-data">제한 없음</td>
+                <tr class="content-table-tr">
+                  <td class="content-table-td">허용 태그</td>
+                  <td class="content-table-td-colon">:</td>
+                  <td class="content-table-td-data">제한 없음</td>
                 </tr>
               </tbody>
             </table>
-            <ul class="content__list">
+            <ul class="content-list">
               <li>FTube의 모바일 UI를 구현해봅시다.</li>
               <li>
                 여러분의 휴대폰 viewport에 맞춰 사이즈를 설정하세요. (우리는
@@ -307,68 +307,68 @@
                 됩니다.
               </li>
             </ul>
-            <p class="content__tip">
+            <p class="content-tip">
               <i class="material-icons-outlined">lightbulb</i>CSS의 -webkit-,
               -moz-, -ms-, -o- 같은 접두어는 무엇을 의미할까요?
             </p>
 
-            <h3 class="content__subhead large text-bold">Screenshots</h3>
-            <div class="content__flex">
+            <h3 class="content-subhead large text-bold">Screenshots</h3>
+            <div class="content-flex">
               <img
-                class="content__flex--img"
+                class="content-flex-img"
                 src="../assets/day04/img1.png"
                 alt="ftube screenshots"
               /><img
-                class="content__flex--img"
+                class="content-flex-img"
                 src="../assets/day04/img2.png"
                 alt="ftube screenshots"
               /><img
-                class="content__flex--img"
+                class="content-flex-img"
                 src="../assets/day04/img3.png"
                 alt="ftube screenshots"
               /><img
-                class="content__flex--img"
+                class="content-flex-img"
                 src="../assets/day04/img4.png"
                 alt="ftube screenshots"
               /><img
-                class="content__flex--img"
+                class="content-flex-img"
                 src="../assets/day04/img5.png"
                 alt="ftube screenshots"
               />
             </div>
 
-            <h3 class="content__subhead large text-bold">기능별 예시 영상</h3>
-            <div class="content__flex">
-              <div class="flex--frame">
+            <h3 class="content-subhead large text-bold">기능별 예시 영상</h3>
+            <div class="content-flex">
+              <div class="flex-frame">
                 <iframe
-                  class="frame--video"
+                  class="frame-video"
                   src="../assets/day04/video1.mp4"
                 ></iframe>
                 <figcaption class="frame-caption small">
                   밑에 화살표 누르면 영상 추가 로드
                 </figcaption>
               </div>
-              <div class="flex--frame">
+              <div class="flex-frame">
                 <iframe
-                  class="frame--video"
+                  class="frame-video"
                   src="../assets/day04/video2.mp4"
                 ></iframe>
                 <figcaption class="frame-caption small">
                   아이콘 클릭시 Subscribe 문구가 바뀜
                 </figcaption>
               </div>
-              <div class="flex--frame">
+              <div class="flex-frame">
                 <iframe
-                  class="frame--video"
+                  class="frame-video"
                   src="../assets/day04/video3.mp4"
                 ></iframe>
                 <figcaption class="frame-caption small">
                   헤더 우측 toggle 메뉴
                 </figcaption>
               </div>
-              <div class="flex--frame">
+              <div class="flex-frame">
                 <iframe
-                  class="frame--video"
+                  class="frame-video"
                   src="../assets/day04/video4.mp4"
                 ></iframe>
                 <figcaption class="frame-caption small">팝업</figcaption>
@@ -378,8 +378,8 @@
         </div>
       </main>
 
-      <footer class="layout__footer">
-        <p class="layout__footer--text small">
+      <footer class="layout-footer">
+        <p class="layout-footer-text small">
           credit to
           <a
             class="text-underline"
